--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@ DEFAULT: '8px',
 <style>
 :where([class^="ri-"])::before { content: "\f3c2"; }
 .bg-image {
-background-image: url('file:///C:/Users/BB/Downloads/Telegram%20Desktop/photo_2025-03-24_18-50-08.jpg');
+background-image: url('file:///C:/Users/BB/Downloads/Telegram%20Desktop/photo_2025-03-03_19-17-05.jpg');
 background-size: cover;
 background-position: center;    
 background-attachment: fixed;
@@ -69,7 +69,7 @@ background-attachment: fixed;
 <div class="bg-white/80 rounded-lg shadow-sm p-8 mb-16">
 <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
 <div>
-<img src="file:///C:/Users/BB/Downloads/Telegram%20Desktop/photo_2025-03-24_18-50-08.jpg" alt="Ancient Ethiopian Manuscript" class="rounded-lg shadow-md w-full h-[400px] object-cover">
+<img src="file:///C:/Users/BB/Downloads/Telegram%20Desktop/photo_2025-03-24_18-50-08.jpg" alt=" " class="rounded-lg shadow-md w-full h-[400px] object-cover">
 </div>
          
         <div class="content text-center">
