--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@ background-attachment: fixed;
      
     <div class="content">
         <h1>About Us</h1>
-        <img src="file:///C:/Users/BB/Downloads/surafel.jpg" alt="Our Mission Image" class="mission-image">
+        <img src="surafel.jpg" alt="Our Mission Image" class="mission-image">
         <h2>Our Mission</h2>
         <p>We are a passionate team committed to providing top-notch services in the field of religion. Our goal is to create innovative solutions that improve the lives of the world and make the world a better place through the teachings of Jesus Christ and the apostles.</p>
 
