--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@ background-attachment: fixed;
 </div>
 </div>
 <div>
-<img src="file:///C:/Users/BB/Downloads/a49fca030e3d264babe315ce0242b86d.jpg" alt="Church Interior" class="rounded-lg shadow-md w-full h-[400px] object-cover">
+<img src="a49fca030e3d264babe315ce0242b86d.jpg" alt="Church Interior" class="rounded-lg shadow-md w-full h-[400px] object-cover">
 </div>
 </div>
 </div>
@@ -225,16 +225,9 @@ background-attachment: fixed;
 <p class="text-gray-600">
 <span class="flex items-center gap-2 mb-2">
 <i class="ri-phone-line"></i>
-+251 123 456 789
++251  976007828
 </span>
-<span class="flex items-center gap-2 mb-2">
-<i class="ri-mail-line"></i>
-info@ethiopianorthodox.org
-</span>
-<span class="flex items-center gap-2">
-<i class="ri-time-line"></i>
-Office Hours: Mon-Fri 9:00 AM - 5:00 PM
-</span>
+ 
 </p>
 </div>
 <div>
@@ -258,17 +251,12 @@ Office Hours: Mon-Fri 9:00 AM - 5:00 PM
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 <div>
-<h5 class="text-xl font-semibold mb-4">About Us</h5>
+<h5 class="text-xl font-semibold mb-4">About The Ethiopian Orthodox Church   </h5>
 <p class="text-gray-400">The Ethiopian Orthodox Church is one of the oldest Christian churches in the world, maintaining rich traditions and practices.</p>
 </div>
 <div>
-<h5 class="text-xl font-semibold mb-4">Quick Links</h5>
-<ul class="space-y-2">
-<li><a href="#" class="text-gray-400 hover:text-white">History</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white">Beliefs</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white">Services</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white">Contact</a></li>
-</ul>
+  
+ 
 </div>
 <div>
 <h5 class="text-xl font-semibold mb-4">Follow Us</h5>
