--- a/home.html
+++ b/home.html
@@ -199,17 +199,8 @@ background-attachment: fixed;
 </div>
 </div>
 <div class="bg-white/80 p-8 rounded-lg shadow-sm mb-16">
-<h2 class="text-3xl font-bold mb-6">Service Hours</h2>
-<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-<div>
-<h4 class="text-lg font-semibold mb-2">Sunday Divine Liturgy</h4>
-<p class="text-gray-600 mb-4">8:00 AM - 11:00 AM</p>
-<h4 class="text-lg font-semibold mb-2">Wednesday Prayer Service</h4>
-<p class="text-gray-600 mb-4">6:00 PM - 7:30 PM</p>
-</div>
-<div>
-<h4 class="text-lg font-semibold mb-2">Saturday Evening Prayer</h4>
-<p class="text-gray-600 mb-4">5:00 PM - 6:30 PM</p>
+  
+ 
 <h4 class="text-lg font-semibold mb-2">Holy Days</h4>
 <p class="text-gray-600">Special services according to the Ethiopian Orthodox calendar</p>
 </div>
@@ -220,7 +211,7 @@ background-attachment: fixed;
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 <div>
 <h4 class="text-lg font-semibold mb-2">Location</h4>
-<p class="text-gray-600 mb-4">123 Meskel Square<br>Addis Ababa, Ethiopia</p>
+<p class="text-gray-600 mb-4">   Addis Ababa, Ethiopia</p>
 <h4 class="text-lg font-semibold mb-2">Contact Information</h4>
 <p class="text-gray-600">
 <span class="flex items-center gap-2 mb-2">
@@ -261,16 +252,13 @@ background-attachment: fixed;
 <div>
 <h5 class="text-xl font-semibold mb-4">Follow Us</h5>
 <div class="flex space-x-4">
-<a href="#" class="text-gray-400 hover:text-white">
-<i class="ri-facebook-fill ri-lg"></i>
-</a>
-<a href="#" class="text-gray-400 hover:text-white">
-<i class="ri-twitter-fill ri-lg"></i>
-</a>
-<a href="#" class="text-gray-400 hover:text-white">
-<i class="ri-instagram-fill ri-lg"></i>
-</a>
-</div>
+ 
+         
+        <a href="https://t.me/+M9VwuQ4xK1M0MzA0" class="text-gray-400 hover:text-white">
+            <i class="ri-telegram-fill ri-lg"></i>
+        </a>
+         
+        </div>
 </div>
 </div>
 <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
