--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ DEFAULT: '8px',
 <style>
 :where([class^="ri-"])::before { content: "\f3c2"; }
 .bg-image {
-background-image: url('https://www.pinterest.com/pin/1118933469921849610/');
+background-image: url('mary.jpg');
 background-size: cover;
 background-position: center;    
 background-attachment: fixed;
