--- a/home.html
+++ b/home.html
@@ -216,19 +216,8 @@ background-attachment: fixed;
 </p>
 </div>
 <div>
-<form class="space-y-4">
-<div>
-<input type="text" placeholder="Your Name" class="w-full p-2 border rounded-button">
-</div>
-<div>
-<input type="email" placeholder="Your Email" class="w-full p-2 border rounded-button">
-</div>
-<div>
-<textarea placeholder="Your Message" class="w-full p-2 border rounded-button h-32"></textarea>
-</div>
-<button class="bg-primary text-white px-6 py-2 rounded-button hover:bg-primary/90">Send Message</button>
-</form>
-</div>
+  
+ 
 </div>
 </div>
 </main>
@@ -256,7 +245,7 @@ background-attachment: fixed;
 </div>
 </div>
 <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-<p>&copy; 2025 Ethiopian Orthodox Church. All rights reserved.</p>
+<p>&copy; 2025 Ethiopian Orthodox TEWAHEDO YOUTH ASSOCIATION . All rights reserved.</p>
 </div>
 </div>
 </footer>
