--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@ background-attachment: fixed;
 </div>
 </div>
 <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-<p>&copy; 2025 Ethiopian Orthodox Church. All rights reserved.</p>
+<p>&copy; 2025 Ethiopian Orthodox TEWAHEDO Youth Association. All rights reserved.</p>
 </div>
 </div>
 </footer>
