--- a/service.html
+++ b/service.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -33,7 +33,7 @@ DEFAULT: '8px',
 <style>
 :where([class^="ri-"])::before { content: "\f3c2"; }
 .bg-image {
-background-image: url('file:///C:/Users/BB/Downloads/Telegram%20Desktop/photo_2025-03-03_19-17-05.jpg');
+background-image: url(' mary.jpg');
 background-size: cover;
 background-position: center;    
 background-attachment: fixed;
@@ -150,9 +150,33 @@ background-attachment: fixed;
             </section>
         </main>
 
-        <footer>
-            <p>&copy; 2025 EOTYA. All rights reserved.</p>
-        </footer>
+         <footer class="bg-gray-900 text-white mt-16">
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+<div>
+<h5 class="text-xl font-semibold mb-4">About The Ethiopian Orthodox Church   </h5>
+<p class="text-gray-400">The Ethiopian Orthodox Church is one of the oldest Christian churches in the world, maintaining rich traditions and practices.</p>
+</div>
+<div>
+  
+ 
+</div>
+<div>
+<h5 class="text-xl font-semibold mb-4">Follow Us</h5>
+<div class="flex space-x-4">
+ 
+         
+        <a href="https://t.me/+M9VwuQ4xK1M0MzA0" class="text-gray-400 hover:text-white">
+            <i class="ri-telegram-fill ri-lg"></i>
+        </a>
+         
+        </div>
+</div>
+</div>
+<div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
+<p>&copy; 2025 Ethiopian Orthodox TEWAHEDO Youth Association. All rights reserved.</p>
+</div>
+</div>
     </div>
 
     <!-- Bootstrap JS and Popper.js -->
