--- a/history.html
+++ b/history.html
@@ -53,7 +53,7 @@ background-attachment: fixed;
 </div>
 <div class="flex items-center space-x-8">
  <a href="Index.html" class="text-gray-700 hover:text-primary">Home</a>
-<a href="home.html" class="text-gray-700 hover:text-primary"> History</a>
+<a href="history.html" class="text-gray-700 hover:text-primary"> History</a>
 <a href="about.html" class="text-gray-700 hover:text-primary">About</a> 
 <a href="service.html" class="text-gray-700 hover:text-primary">Services</a>
 <a href="contact.html" class="text-gray-700 hover:text-primary">Contact</a>
