--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@ background-attachment: fixed;
 </div>
 <div class="flex items-center space-x-8">
     <a href="Index.html" class="text-gray-700 hover:text-primary">Home</a>
-    <a href="home.html" class="text-gray-700 hover:text-primary"> History</a>
+    <a href="history.html" class="text-gray-700 hover:text-primary"> History</a>
     <a href="about.html" class="text-gray-700 hover:text-primary">About</a> 
     <a href="service.html" class="text-gray-700 hover:text-primary">Services</a>
     <a href="contact.html" class="text-gray-700 hover:text-primary">Contact</a>
@@ -101,6 +101,46 @@ background-attachment: fixed;
                 </div>
                 </div>
                 </main>
+     
+  
+</head>
+<body>
+    <h1>A Message of Thanks</h1>
+
+    <div class="section">
+        <h2>To Jesus Christ, my Lord, and My Mother Saint Mary</h2>
+        <p>
+            Words cannot express the depth of my gratitude for You  my lord and savior Jesus christ, thank You for Your endless love and mercy that guide me through life. 
+            And my dear Mother Saint Mary, Your comforting presence and intercession give me strength and peace. 
+            I’m humbled by the blessings You bring into my life.
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>To My Mom and Dad</h2>
+        <p>
+            Mom and Dad, thank you for being my heroes, my protectors,  
+            Your unconditional love and encouragement keep me going, even on the toughest days. I’m truly blessed to have you.
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>To My Classmate Betselot Fiseha</h2>
+        <p>
+            Betselot, I truly appreciate everything you’ve done for me. Not only did you help me with image sources, but the way you took the time to make sure I had everything I needed shows how genuine and thoughtful you are. 
+            You’ve got this amazing thing  for lifting people up and making them feel supported, and I’m lucky to have someone like you around. 
+            You’re more than just a classmate—you’re someone whose kindness and brilliance make a lasting impact.
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>To Solen Abbe</h2>
+        <p>
+            Solen, thank you for saving the day with your coding expertise! Fixing HTML might seem small to some, but for me, it was a mountain to climb, 
+            and you helped me conquer it with ease and patience. Your support has been so uplifting, and I’ll never forget your help.
+        </p>
+    </div>
+ 
                 
    <footer class="bg-gray-900 text-white mt-16">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
