--- a/about.html
+++ b/about.html
@@ -84,10 +84,34 @@ background-attachment: fixed;
         <p>Our team, EOTYA, was created by Betselot Tafesework to deliver the best results for the souls that need the message of Christ.</p>
     </div>
 
-    <footer>
-        <p>&copy; 2025 EOTYA. All rights reserved. <a href="#">Privacy Policy</a></p>
-    </footer>
-
+     <footer class="bg-gray-900 text-white mt-16">
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+<div>
+<h5 class="text-xl font-semibold mb-4">About The Ethiopian Orthodox Church   </h5>
+<p class="text-gray-400">The Ethiopian Orthodox Church is one of the oldest Christian churches in the world, maintaining rich traditions and practices.</p>
+</div>
+<div>
+  
+ 
+</div>
+<div>
+<h5 class="text-xl font-semibold mb-4">Follow Us</h5>
+<div class="flex space-x-4">
+ 
+         
+        <a href="https://t.me/+M9VwuQ4xK1M0MzA0" class="text-gray-400 hover:text-white">
+            <i class="ri-telegram-fill ri-lg"></i>
+        </a>
+         
+        </div>
+</div>
+</div>
+<div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
+<p>&copy; 2025 Ethiopian Orthodox TEWAHEDO YOUTH ASSOCIATION . All rights reserved.</p>
+</div>
+</div>
+</footer>
     <!-- Bootstrap JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
